# swordfish_com_example

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  pyproject.toml
.cargo/: config.toml
cpp_example/: CMakeLists.txt  main.cpp
java_example/: Main.java
python_example/: main.py
src/: lib.rs  swordfish_comm.rs  swordfish_concentrated_message.rs  swordfish_messages.rs
src/ffi/: glue.rs  interface.rs  interface_python.rs  java_type_map.rs  jni_c_header.rs  mod.rs
tests/: test_swordfish_comm.rs
